@@ -50,7 +50,7 @@
 #define DEFAULT_PAGER       "less"
 #define DEFAULT_EDITOR      "vi"
 #define DEFAULT_PSQL        "psql"
-#define DEFAULT_INTERVAL    1000000                                                                                                                                 
+#define DEFAULT_INTERVAL    1000000
 #define INTERVAL_STEP       200000
 
 #define HZ                  hz
